# grpc_facereconition_server_core

./: .gitignore  Dockerfile  Makefile  README.md  Readme.md  Settings.py  bidirectional_pb2.py  bidirectional_pb2_grpc.py  client.py  db_handler.py  docker-compose.yaml  encoding.pickle  etlpipe.py  project.yaml  pyproject.toml  requirement.txt  server.py  utils.py
.github/workflows/: docker.yaml
proto/: bidirectional.proto
